<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/redbackground" >

    <TextView
        android:id="@+id/info_text_top"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageViewAddRectangular"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:gravity="left|center_vertical"
        android:text="@string/compare_pizza"
        android:textColor="@color/pizza_list_text_color"
        android:textSize="@dimen/pizza_list_big_text" >
    </TextView>

    <ListView
        android:id="@+android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageViewAddRound"
        android:layout_alignParentTop="true"
        android:drawSelectorOnTop="true" >

    </ListView>

    <ImageButton
        android:id="@+id/imageViewAddRectangular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+android:id/list"
        android:clickable="true"
        android:contentDescription="@string/description_add_rectangular_pizza"
        android:padding="@dimen/pizza_list_standard_margin"
        android:src="@drawable/pizza_eckig_add" >
    </ImageButton>

    <TextView
        android:id="@+id/info_text_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageViewAddRound"
        android:layout_alignTop="@id/imageViewAddRound"
        android:layout_toLeftOf="@id/imageViewAddRectangular"
        android:layout_toRightOf="@id/imageViewAddRound"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/add_pizza"
        android:textColor="@color/pizza_list_text_color"
        android:textSize="@dimen/pizza_list_big_text"
        android:visibility="visible" >
    </TextView>

    <ImageButton
        android:id="@+id/imageViewAddRound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:clickable="true"
        android:contentDescription="@string/description_add_round_pizza"
        android:padding="@dimen/pizza_list_standard_margin"
        android:src="@drawable/pizza_rund_add" >
    </ImageButton>

    <View
        android:id="@+id/view1"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/imageViewAddRound"
        android:background="#FFFFFF" />

</RelativeLayout>