<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:background="@color/redbackground">
    


<RelativeLayout
	android:id="@+id/relativeLayout1"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:background="@color/redbackground">

    <TextView
        android:id="@+id/txtLabelName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@color/pizza_edit_text_color" >

    </TextView>

    <EditText
        android:id="@+id/txtName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtLabelName"
        android:inputType="text"
        android:selectAllOnFocus="true"
        android:text="@string/name"
        android:textColor="@color/pizza_edit_text_color" >

    </EditText>
    
   <TextView
       android:id="@+id/txtLabelDiameter"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_below="@+id/txtName"
       android:text="@string/diameter"
       android:textColor="@color/pizza_edit_text_color" >

    </TextView>

    <EditText
        android:id="@+id/txtDiameter"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtLabelDiameter"
        android:inputType="number"
        android:maxLength="@integer/max_text_length_for_pizza_size"
        android:selectAllOnFocus="true"
        android:textColor="@color/pizza_edit_text_color" >

    </EditText>
    
    <SeekBar
        android:id="@+id/seekBarDiameter"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtLabelDiameter"
        android:layout_toRightOf="@+id/txtDiameter"
        android:max="60"
        android:paddingLeft="10dp"
        android:paddingRight="20dp"
        android:progress="0"
        android:scrollbarStyle="insideOverlay"
        android:secondaryProgress="0"
        android:thumb="@drawable/pizza_rund" >
    </SeekBar>

	<TextView
	    android:id="@+id/txtLabelSellingPrice"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/txtDiameter"
	    android:text="@string/price"
	    android:textColor="@color/pizza_edit_text_color" >

    </TextView>

    <EditText
        android:id="@+id/txtSellingPriceEuro"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtLabelSellingPrice"
        android:layout_toLeftOf="@+id/txtLabelSellingPriceDot"
        android:gravity="right|center"
        android:inputType="number"
        android:maxLength="@integer/max_text_length_for_pizza_size"
        android:selectAllOnFocus="true"
        android:textColor="@color/pizza_edit_text_color" >

    </EditText>
    
          <TextView
              android:id="@+id/txtLabelSellingPriceDot"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignBottom="@+id/txtSellingPriceCent"
              android:layout_centerHorizontal="true"
              android:selectAllOnFocus="true"
              android:text="@string/separator"
              android:textColor="@color/pizza_edit_text_color"
              android:textSize="30sp" >

    </TextView>
    
        <EditText
            android:id="@+id/txtSellingPriceCent"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtLabelSellingPrice"
            android:layout_toRightOf="@+id/txtLabelSellingPriceDot"
            android:inputType="number"
            android:maxLength="@integer/max_text_length_cent"
            android:selectAllOnFocus="true"
            android:textColor="@color/pizza_edit_text_color" >

    </EditText>
    
     <TextView
         android:id="@+id/txtLabelSellingPriceCurrency"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/txtSellingPriceCent"
         android:layout_toRightOf="@+id/txtSellingPriceCent"
         android:text="@string/currency"
         android:textColor="@color/pizza_edit_text_color"
         android:textSize="30sp" >

           </TextView>
        

            <SeekBar
        android:id="@+id/seekBarEuro"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtSellingPriceCent"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:progress="0"
        android:scrollbarStyle="insideOverlay"
        android:secondaryProgress="0"
        android:max="30"
        android:thumb="@drawable/euro" >
    </SeekBar>
    
     <SeekBar
        android:id="@+id/seekBarCent"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekBarEuro"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:progress="0"
        android:scrollbarStyle="insideOverlay"
        android:secondaryProgress="0"
        android:max="99"
        android:thumb="@drawable/cent" >
    </SeekBar>
    

         <Button
        android:id="@+id/btnSave"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekBarCent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/save">
    </Button>
     
    
</RelativeLayout>
    
</ScrollView>
